--- a/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -3,4 +3,24 @@ kind: Secret
 metadata:
     name: cert-manager-secret
 stringData:
-    api-token: g7541CDl4QtUOcWeULO1kdIsHQRoiCzFtNr3GNpJ
+    api-token: ENC[AES256_GCM,data:jtLjnscZlLM/j20VJc4Tc/QtUDZVgvs11vhvwdHSqeiHgiu9pV+47w==,iv:VXrDCubP968lZA5Jpq/b5cUTq17tcEmir90XfZBB3HE=,tag:X1IgaqJ3xA6HH0VNXhnz4g==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MnhURWhSWnU4VloxVk1v
+            azVFMUJpcUVKYW5IdnRLT3VlZXZjRzVMUzBrClRzZUdqUWJRL2JJQTFBVmphU0pv
+            R1NLbHVkTFJjQ3FGckNYcjdQdVJKUEEKLS0tIFVhUDBMYS8yN3MydXczZ1M2RG96
+            VTVNR1VadHduNmcvenlmU2ZHZDhMbGsK24sX6m0e0lfPC6v0ocZ6hSuOPWegb0Nw
+            Bcti5Zw5/r1mOdgjmtJxZorqZnRe499KjK6zncG9eIv6FNfb3ERdwg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:18Z"
+    mac: ENC[AES256_GCM,data:DuY7PiSJppZDyzV6O1NLW3aPqvs3L4qTPm6hB160zitFLKPDBPG43zfpAI60EOnJ/g3mfVVlBdaCYeulJOULo1FnHEsewoV4pg4jQPbYQ/n2Z2ESXr6YCyz5kmjrEfC3FRieDO3Ra+6SgkfwpLcrA1/aE/yYV0dhtRVmoUycf3E=,iv:N/YdHmLAcN8WFAazfruReqdMgb8GY8zBGTJ/zvKHWzg=,tag:tVtUSIxvv+AB3z1OWY6U8Q==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
