--- a/kubernetes/apps/default/bazarr/secret.sops.yaml
+++ b/kubernetes/apps/default/bazarr/secret.sops.yaml
@@ -5,4 +5,24 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    API_KEY: ENC[AES256_GCM,data:b91fxnqy8D5uSxuBN8r7UDVPoE+W/5xia7BSgp+5Opg=,iv:fmjCynbRuRYiOX99n755Ts5ptkSTFhCdI8GybomW4aU=,tag:0rO7VdDh0EMvTWgVWFZfkQ==,type:str]
+    API_KEY: ENC[AES256_GCM,data:NNNgUG2tcskIxqafLlFCnfgjmfWDWDeMbLq26ZBFeKtVXd+4jap+P0/JM8GNOuoWxpqIxhlpmWmuDjfy1eywV8fBL4nnJWn85phA8g2fKaH14+YN05Qlm1rw64uYwqBjm5e46EmmPZYy1vTHBo3aQ0jEri8aUiMmJB5r5gsaoxy1/ZB/1dfd4u8gi5qvMreip2h4K0t2EQ==,iv:4HxBhTF+6n1msREIDefrqKdjKGIvgEMe1VMImE350Ao=,tag:TBZV0+PH42hrE5csND7YWw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUOTdIbnF3djgyOEk3aW5w
+            TjUzVDQ0SmFjRkE3R0dHYUhnUGY2RFZYYTFrCjViS05uOGRZekdldkV3RU50dGQ0
+            WWUvYjNqeHpBMDExSCtkWFQ5b1F0VzgKLS0tIHk3Z2dwdmphdWNpa0Z4dWQzcDlN
+            dVVFbTI4b1hjYkp6RUFiZFQ0cmtnaGcKa7LLrgJbqqenTMuvGKLCOL/LyDyChe/G
+            bmLqPMfRAmvPV6YhrzBME9pMTNN0Uoz/mJKOAVKXG7F+KbMou0Y9eA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:19Z"
+    mac: ENC[AES256_GCM,data:N1GQQ8MIon8684fnmCGdDfMXbrIJ9CkesN4RcfZakwXBJOzBwGXb6ZvJrha25Ue5y/EcaWmes+7tmDTtdKl6o4Rx54eUYKyuuuzL7hxGj+3DJJGQbSjPkbqaM7g+KpB5AC5U7KJ/2n38SjzgqRFltL2jbg3JHjAN4ORut0Dk81c=,iv:XeAAXS2bbFix6WtOeMOYZSz5yfUS4SoVIFTOPjFhEJg=,tag:22Wc6XzL3JA7yHF6tVeb7g==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
