--- a/kubernetes/apps/default/doplarr/secret.sops.yaml
+++ b/kubernetes/apps/default/doplarr/secret.sops.yaml
@@ -5,4 +5,24 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    TOKEN: ENC[AES256_GCM,data:xRfZ9DArcOun8Ay304qii57JZm6h9fYJ9nYZHVp2/nPN16zwo4sEAGXpHkIFG6ugWsBz/Be9/Ns9p9CaHHI7D8IuG/rfEmBh,iv:CE9rmnD3q2enIFPFSm6s0F5iiJ288JVTZQXlrQb/igo=,tag:5LsGoXyb29SrH1exWW2A2A==,type:str]
+    TOKEN: ENC[AES256_GCM,data:P6qsG9MuJ+5yY/wY8vdHJojttxy8GGFN62cmi+B+VE60+jvspzZDDtljWcEcRNNYQ/lgaOdCCD1fsyNPHMrrmuGyJ2DIXb+qCT+NAjohOqboUL43x3hdYhva2h4eKna59Nos+6qQHiWrdmzks3W2cW+JtJL3AaIGn2UIVP47ylDfKsutadU3rA9cdgUxN5fUDBBzC+1YNmZbXaWVWQkexQ1Ad2FcyrQA3rQFpbb3rls0fVp8OB1r4zaLERgQzzoHBmqX62ZE6Xk3ZJQ=,iv:phX+sMatH6sqnBWII+KCOhd4ALyNF0uMDH0KB34naQQ=,tag:pVQPkGi43EWVrevkrxgRJA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0R2NsbFVodmI2ZG90d1VM
+            b1JwMkhRYVJGdCs1THhIcmdBUzQ2RDZJckU0Ck05aUFweUUrQ2crNi9ELzdjK2xF
+            R29tTzc5KytkMWs3QkRRMEoxa25uM2MKLS0tIDNJSjdVL0NONWVMSXVsN2tuVzFB
+            Q09jdE1YTzVwb2VnMmlReDNjNFJFa2sKc22p4bBquDaXa/JY8xDv7dP6kC3Ef1CU
+            BFl7wwo/LwtN5L+zy39NTNz7ByQ+DvVixSYDAOtDYcID8JwMtR64Gg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:20Z"
+    mac: ENC[AES256_GCM,data:O8NNgg38Sqj3y8/sQ55ExCmtdRLcVIUBrUd2rQ+WJ5F+DadOkxTrgmr3RlAgy03lO+85veiGd7A7LMmDykzzkOoo/1qAZ3Gw5n3kiknYfARydxRY+R4l5dovuErCBh5RegdtZr6nh0QQ11cpAz6mDJLSEgz9d2P4fTvuGxwXzH4=,iv:oa6WZC38vMq/ol/TPaXl3gZQTwcT6PGGF6+2GrjTzZs=,tag:hH27gBaqx5RkntTaHekrPg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
