--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -5,7 +5,27 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    API_KEY: ENC[AES256_GCM,data:QuHEYe9/c/oKIDKytnk5mNNK3dTDVq9XL18FFp8heGS0U8NW0kjRZozpGv0=,iv:VxhgTRh3LGxn7M9yQHy+x4sOMs57HuWAWdZMSb2IxW0=,tag:73uRlju0UCIIxkF85euP7g==,type:str]
-    APIKEY: ENC[AES256_GCM,data:NPPt7ZRcu/fmiuv8RUGauGivwwCT7d/mUD+bHF4PSZalta8BrIKdT4uVXXE=,iv:PLLmzFdczvrClQ5EkBMLK5wrtOqOMdyeXzvnBqrkyGE=,tag:4aOP2WJUMcf3tYOqwaD88w==,type:str]
-    AUTH_PASSWORD: ENC[AES256_GCM,data:SyvEbltDDVM=,iv:YJi5mwFoULMY1ESuX5OKJXGKhsMfv5xdTeHEQGowCy0=,tag:qoGKCuPou2S3CEN2FT6pPQ==,type:str]
-    AUTH_USERNAME: ENC[AES256_GCM,data:6Nk7ws603wRXuE/3,iv:XCc/Pui48R/5+hkUGjwcNblOdNLLRqDYSd8eFpBzI8I=,tag:CbsBJ455LxY3kW+rOWswZQ==,type:str]
+    API_KEY: ENC[AES256_GCM,data:9UJjUVt50CnOC/kLhv9CL0bsa2Y8L5yg1Gmeqwry2kFuFyANWRza3N1SrHUoyZ0kpY5RLC9L0l0uOa6V7i/dIPnPCJr4ZyXNl3gp1bsRZlCg/ItTe5JlqTRaMDtjj4jOapeVA/f23JIHEq8NlgTa7p+f+wMIurtFLUn5JAY8zfv/HjT8eQEIkdOKhF+HDvYyrZtEnxGYMwKNFof8+fqCavlrAC+9zrg=,iv:hzOpxLdO8elQXxyxrQ+85Qj+h7JMeWluXp3nHucpCSU=,tag:pOmFJNWoXFNFtPIKh3aa7A==,type:str]
+    APIKEY: ENC[AES256_GCM,data:LjU7VMclEYMPSsuFZmNNNmlwbs6FqDv8gkfQ9UOnxyO6+dtejLq8fl/uGzhmxC6sL+BLGxwyML0Uw7t26OAJtY87afsNSjFHrYeBMMqM7wq8pxyx/kUsuaIokHcBOGEGA58A0blvCKL96zf4jad01n8B2515v4h1ZHzK3OJAgYiyPSBghVo+H0m+/pdKrjugBUOpoF6dAIi4AmptnKAh11QsLiFC3kc=,iv:u6yU55BNUZ1rA+LmBEkKH6aziDCA5tlbmyS37FckYEA=,tag:6YrNkejUJdcgvyAFx75FLg==,type:str]
+    AUTH_PASSWORD: ENC[AES256_GCM,data:tXTYY5LPUeD3Pvfop6wQ+Xj1SuFCEbXAsYyl0G3q4zShaFnmcUMdphsxWl3VBwzcGKs03B5vWkauYpQjtgS/bptaEVUosmTQGssN9kUzQpgAi4HNv1l45iX5CN5RZsgJ5KVin1sK7StCWGfQDZRaI2Z6oTLZNIM=,iv:bWgo3VBV6wub3i809DI9c9M6e0XN+nmfIvmCtlNKFDA=,tag:TogJO/CR//OGI7HERSeyKw==,type:str]
+    AUTH_USERNAME: ENC[AES256_GCM,data:iCICYxKGB5vTJkPlSnCFMuuz9uOJ2RLBXHadMUjmQpeWrmBeydw/A9OCa4lijXa7129OZYNz8HH2kpmMqI13IbR0FuFnovOD8w8QniQ3X0NivlMkM2joN3s2DTR2lt6PLb5U9CAvXXApQ7LWe8nQAe9Sq5uJj3z+/FGk,iv:ldlQRuD3DPWxDmCXG1O/3mcWXUknzzoKmtqxd+kwds0=,tag:iAIrjzVvQ12JhA0LI5HQjw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNekxTQ2ViSzJLZ1NKd3BH
+            Uml5am90QmZ1WnRHVzlEMTJ1SVl0dUhjRWk0CmJwaHZEVXRCSitWSElSYjdJT2hZ
+            QlB3UmR1R0tEV1JETjZsdURWd0JDN28KLS0tIDlVZ2wydWZ2R25VQ1BLRVZtS0JX
+            NExiZE1BcGNGY3RuWk41eWt6UjIwaWcKpJjcWyAO9k53m73KbB9geeZoXw105a/U
+            hXJy+82qHd5s4TL2OlkJ8roB5r4jPr/2ApUmVNrqB978ps/wjiNo5g==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:19Z"
+    mac: ENC[AES256_GCM,data:EWppEUOowUkieIWzUYe90nK1/aWxG6+QzJcvMrQvdmbloJFNBSgmCq2rojQ8Ak2L+W66FewimxAeWzdyb25PKrirMOVyrl3gnO4/TZSbxBeA1AEjuSkl0Uhk+Wxa3i5EvrjyEtOXgabHHqVLIhRuadZnljfYLwByA3a0YppNlV4=,iv:4hjvamyZsaPgQ0mZ84BYjRBdNz3fQ7RD9suqxZFI+Pk=,tag:4Qz59JNkYznjPvwjkS3x9A==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
