--- a/kubernetes/apps/default/radarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr-anime/secret.sops.yaml
@@ -5,4 +5,24 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:FmlSk+iJhHTFWxQRuScsOr6hmwgbaUMKrwvHN+ITxn0=,iv:zOtD/xaQcIaBPNsHUZZl/il9m7cArSyC08HvwtcqXd0=,tag:fzQl85PVr1D+lPdyPJuTvQ==,type:str]
+    APIKEY: ENC[AES256_GCM,data:ClBcKxwiOIzIa8w/RXhS79r2z2RFmBtPYgi6rGwXl5poxZzHsrczyYkwdk36ubB2wIHrWf1QZC/zf/anesRfwv3It17BjPsFEAxAozgoZt2SKaft1hZkOmVGtD0s9BExR3eCVvPWbGrqAJwTsn2IxDrZTQtthNjTxRzjdxoMmyvq7GERULyJiUrTRO4f667ng7CPLD0xJg==,iv:kz2OTy6fMzmyredMhG25DQnmyzRPxYzDNaHpTl4mQ+Q=,tag:X0ReArlYP3i5LEuwPWbTuw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByYXphUHFsVUdUemYzMEtT
+            c3lndnAwaTlxeksyUlNaN0o5dGtXWDQ1WXpRCjgxenFVZlpySG1jNCtGeXlsM3BU
+            WUowZ3RUaTBBU2xsOWhQTFFDSlYrRncKLS0tIGErQ3VVajBCd1JpeWI1ZkVNWWh5
+            WE5NUlBwK2J6RDZ2WDFXVmZHSExrZ1kKfn9a3Sr2PsIgmpZbLdh60AUOQ9n4LcGp
+            dFmBJJFEkdgVaQe/wSf6TJkFrsHhgBmFleUugrLZKlYrwCaqplK20g==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:20Z"
+    mac: ENC[AES256_GCM,data:nsE6uLK/N23krOgO3qzUEq7oydNeCYmn4/gLDvBlG0eAi7Og3OC1ZElauVhAxc0ztFSGrRlHzRwhMtkDbRmCzQA77YAvcYFVqhyfnvQGlyIs/LRt9x0oRhImORSUrAM8a07NlqbhsXf3n9MAXsO27w6XOcGHFthdvc0uECFCvgE=,iv:uWTKLndjCsnnvl0aJq3EOMsWEBwP1HJeipSWVt/T9JE=,tag:c6h+l1yucD3VruVHr5r9qg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
