--- a/kubernetes/apps/default/radarr/secret.sops.yaml
+++ b/kubernetes/apps/default/radarr/secret.sops.yaml
@@ -5,4 +5,24 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:JMJL2saiIsDPwVfHOVx6ev1rNQ2JxFvmUEO+E1/ymMY=,iv:xJ6/EwX56gv3afIPSB670O2ophurPEVif4m7YgtkLsw=,tag:7YeA7oF3M8TA5kLZcCijzw==,type:str]
+    APIKEY: ENC[AES256_GCM,data:LdrId5Of16zZiWtO8Vt+cnwzCPlAJkLqvulPfzB8sAzajqb7Zy3I7mNjEMsRs6Uxxn7OCxiPKIsEPTxtYV3RYxWPQAmWb09OIXgCQnQLLJG0PvpRhfiKpB3Vh28GzuQHRuWBGMHZ3VeEjL/17xLD2n4EUXJWtf7GYvbFQIdm3xnZrUrmtG3p9toAzeHixEwm4/WlQbbrLg==,iv:kOy2mz/6x8HMJzYWp4hB7T0DrvRI00GhPk/wO9fyBko=,tag:a1DxMyfr7CkETB1bakSmyg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzUXNoRDhNamRFQW41SUV0
+            NmE3T2U1ZDZWaEdqVHpsTmJuVHpWeVJjL0JNCkQveWZ2SVJCME5WcloxY0lJWnRO
+            clBVYnRsbjFGdDlWem9qYk9uRmdIazgKLS0tIEE4bmpaQy80SEpkVGUrREtJTEY5
+            TzNDVmxIVUJueS9xNjZVTElUMmJIWUkKYw3ma1L0HmktL17gGeOKWNkTvXvMTiaA
+            uPdwHcuMR1qyqhfEDiwW37uGVLh6/oB4A14b1CO+5D5ZxSmO9+9JQw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:20Z"
+    mac: ENC[AES256_GCM,data:yyDTMiJ4fDxmA5ZR+l1GGjwzKXbPwOzjVTdHWVKpR0jYc5fFkl2ClJJTYrGsO9TJgTqdhUn4f+XrTcaLM9tb+JdTqKERlOpGcT1VCaddI1hcLHY0I4adYEhgpDbt8EzqQpc7TlH2LrMIo4jVocCSia6rCuF7xayLj/1LkL6aM9Y=,iv:RJug1UrGnskga1zUt7q9P+/ycXn/UNrBN3ipCbpvuV0=,tag:LYFiFK/GbCDSXdvygcUmXw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
