--- a/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
+++ b/kubernetes/apps/default/sonarr-anime/secret.sops.yaml
@@ -5,4 +5,24 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    APIKEY: ENC[AES256_GCM,data:z/xbQ1ioumic1tqCZ+Jv4YAc4t57ZM49/1Q/UkCbiU0=,iv:aK6JhKRQOxCRm36LVHdCNOU2VVLNccMWTgk1w48YbVw=,tag:mjKMTp+XeQnRHw0JDy+Osw==,type:str]
+    APIKEY: ENC[AES256_GCM,data:n76PI130zoYsnwU6gQlOK8TbxiLY4AMzOb1DVWGict0HCZDuWXG9Hb66p0pNzb9hMYxMtH95peQv9bLyGU1y28RzK0LcH/qglYLVqxqtRuygBtF4Ke6IC87KADmS60NRo4lxTC2zKXdRRXzlA1OLqYlZezlsZtIeqytGQEIzAUzcY90BzcGaFAE2/+CAwSwG1GMU+7pZyg==,iv:dKxERO2hX3fmncNzKfz8Kzl0pz56BSkHbZ6X6pe6PJ8=,tag:3FcyrcvuGACwfETXa69dlQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5VlRyZllXYkJMbmpMRUt2
+            NzNJWEVYMldsTHdwam1ScWdMMEpscm1wWlRrCkRha2tRQnVGSURsWmVpS0tlclk5
+            UUpEdGVQdlNrMFZBQXBVYTQ3TjRVRTAKLS0tIGpIZFpkdy9EYnhKd0lpbFIyQW1r
+            WHpQeTQzQjN0UGhUdXQ4Zk5iTUpUWXMKfDRRduXlo/klML2RN0qOlYIQTlXF6XS3
+            CiVwcjrYs2OvmZnXCYY8IwP4CbpTAJcHDwkiI1LEfx5LEHDp45uojA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:21Z"
+    mac: ENC[AES256_GCM,data:oV89korQX6syIQpnIsoqakdAtu2nCCC/wkxPraHmI4QtBlAMeipdBAppTGBuFSdLKz+fRvfjq9JdH/dbbxyjoMGhB46CQYkKoOsPcZh8SdKaaIRYNroqqBDJ5wbnvHdT742J/H+auFW8slcClRCnwgoaYVDt4bsGHRcZc7wLZFA=,iv:Z/Scf3ji/cGfAbOQaR/zXvaAtRUbUExfgvNsWXm+EX8=,tag:yr0eqac9TT8fwf5U5dmZwg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
