--- a/kubernetes/apps/default/tubearchivist/secret.sops.yaml
+++ b/kubernetes/apps/default/tubearchivist/secret.sops.yaml
@@ -5,6 +5,26 @@ metadata:
     namespace: default
 type: Opaque
 data:
-    TA_USERNAME: ENC[AES256_GCM,data:xLP0XSeDXAISIN2A,iv:fk3RO21/sBR3sofWW4QQZp+Px6h38kqf6laY6pC/n+4=,tag:7xKRdoS3D+XPaEQyP1D41w==,type:str]
-    TA_PASSWORD: ENC[AES256_GCM,data:ixzcQaDLGKY=,iv:Tnwc98lf1gQ6ac0dg1TzKO7gwSML30OLaOuW1ASnhjo=,tag:jLiHjdDsQkyrbYez9kqnWg==,type:str]
-    ELASTIC_PASSWORD: ENC[AES256_GCM,data:dazOfnR5OkPk2WrHa6ctPw==,iv:9Wgkdr7MX7rrXhUFKfO+Sje9mGcFuMOI0NAFIuFF/Ko=,tag:fTBcN16SYQjSQTuH3Tl8IA==,type:str]
+    TA_USERNAME: ENC[AES256_GCM,data:ErXDhDi5JK9NuHcoskZV2tQ2fjox3bkPHJkzatkOmlPcY7zRJv8gwZGm0HZ6BT74hRJ6JYYuUQVbMPiP+YeXkazuUItmTgmGdQJrQ3kJYG3KZx/CRORrseG1M0buDeDUSIOdC8FVkGlPes9kTfsR76S5KBvXAs3HyRsw,iv:GzEnWWZ3DJJw4B95HLVHNJshMdo9lSLYuOQspPs1q28=,tag:pfNZp28apiXo/3OJOuhD9w==,type:str]
+    TA_PASSWORD: ENC[AES256_GCM,data:/yR7TZFxQx0kixrCXKI3H0ZZtTVhbZQm2qO0evuYmh6lx53UqFrrmGVcZnUtJNY7LNi16nE2gVCzz5pwPq59g9JN8WQvKgysLa2D0u01Dj/TkJaQWNjCB7i+u/LJgYhlgMojmdXvMG34g5PSV7J3ll1z8KpAsmM=,iv:gBbITgb6H8DDaqvcsBJiC9phOflV8qw5eaKfe0PZLUU=,tag:UZDAuc9Dm4hgLqP+C+NC9A==,type:str]
+    ELASTIC_PASSWORD: ENC[AES256_GCM,data:qvJGiRDO5v/1VfJyu6ruSh5dkPwltE/zqko8flOHbFqyIXEu/9wglK5KLF/9Rq3WfQVX6CLgM4YliH4LPnUAJOvhl6Vphg1FTR/7KEmp5epHUXkcwbUjVuUajSRz/rSv9ro22Vp/02CyddNGtG+LW6tVC8yTVCuNAQR9CcQEYJ+g7ro=,iv:iPihyh74felzBYWEN/+hRi8YASs1fk7fHgwKWo62Msk=,tag:/0fV/rcLkJPF9PGApm8dlw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHQ1hrbkVVWUVCbVJ5aCtP
+            YWdwV1BYWXhVWVhkNW5GaWVzNVFlUGoyRzNzClREaHdVWGRrb3JwUjFIZWk2L01S
+            ZThvMTYyY2V1ZmQ3TXo1cVdwK25tMzgKLS0tIHdsUzJqNWZtZ2R6Y3VIOFB5cVNK
+            M2xzbjJjNUxQSU90OFEwOU1jUkFkQ2cKAt2jn87Eqvb6EkIxFqhtl6dWz++TvFzw
+            IxI8fpfrTtUBciO/1yY45wQ6lbVTlGgRlQov2Cf2uT6oAjPjWBHAvg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:20Z"
+    mac: ENC[AES256_GCM,data:M+JHs+rScWykVL2bQsZBZzaSEjWvh9yU3bgfp34YZbA0hEtY2D1kkik3rk9IAoqLiPx4deSFwptVKXwuvhsC5i+Se8928iXtlPqtiPoWteEVJyrb10tAyb0+p0b83Dox6tHNlO0ih38b/XouwGLvlhgP6jMsgJoCWeaInpWUVDQ=,iv:L6E8vKU+1VsPZABMOYe8/8m5EMGBMXbWhF5LsoR+NmU=,tag:LkNdFQWTmlBFsDkXwgEYdQ==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
