--- a/kubernetes/apps/flux-system/weave/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave/secret.sops.yaml
@@ -5,5 +5,25 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:Rso43zqXh6se5A==,iv:Q2mAiRNwjqWi6isWrLIBthQoqpsUEJ4qMvV4D4Rz1ew=,tag:yTbmfN94fqDpHDfhGBc/dA==,type:str]
-    password: ENC[AES256_GCM,data:pdwUHP6GrI3NOmT6kkNoeUsNrYUCTUa7qGJRLmgMhIQHzEHgOAFj4fBird1Xp78F/j1czre3auhB1Gcn,iv:2zmmGDMaXNN1TdBlLEEwoItrCIIi6pVR0/O1UNIiwjY=,tag:rCvmNuowYHiIDBYoyOzKQw==,type:str]
+    username: ENC[AES256_GCM,data:t7aLBepzmlEcKiv4F1CYx8hzjJv/eXXdQHGHxRLkPUZX93PE09jtVBNQRWHkJUfLgNWk08VpS0eFXaxRHyCBVkxyTQOwu1EVRga402+gE4y/1UAWt27H2Naje2x3y9GDrYNHrlbpDbHXxJ8WhwjKBywVZRmy/4uT9EgI,iv:y4woLQrmJgxTLeZlOU6ZZLr/ch0rQMvz3zYGKOofmD8=,tag:Yvcd+9n+mEeeeMxp0ovTpg==,type:str]
+    password: ENC[AES256_GCM,data:K3NtUrLYcOm+jYG8qaRsl5ekte1WtYUQyy+tnlbE1OfR99KohGGtwHSknBL1O8ahHRsb/BD1YGTc4d+Rn6qotRnK64rA8kal+Yf2GVqj5fEJRoMcCSFbcEAI+oYpj8wwBF5QkeP91M/c8wT6oMNYDdmSe3i3JOYvmxkAjw97tThhqm76zG7lbOUAxNb+zj8gUwmQV5l5QIJo0qJHFN+VoSTsKcjS5gugU0n2lha/fO2PHWDUjXARJSBQqw==,iv:F+dN7HrxSZXX5G91K3UMyNup2O9lq/CJIBdDaWfxJIA=,tag:Q2h9j3etLcxhFBibA80cDQ==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBidDBUTG5jK3ZQVGF6V3BZ
+            dVVEdFdBQWVYdG5IVlluT3NOemRweENvUWxjCld0a2VVZnFpWEkycDVXdldBY202
+            a1A3eVZmcko5a3RZbTRPOGpLRmR3ZUkKLS0tIEdpcENqNmNxUzFKemdYK2YwMVRl
+            MUkrQ1BqblBkTnJEbmh1SCtUMVNYejQKeL4j3Pr/uHHxz+iByBOlgGWu4sxdd5EI
+            ufDLoz+pZ7J6ypu3rW7Yye6T8ksbGFnEAW0lc/bQaDHbxyiPqBsCFA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:17Z"
+    mac: ENC[AES256_GCM,data:VRNkVfJSGdeAV3p3pmtuZoS8S7GSKI1Y7dQddqXfiHHIxldlkKe3Xe4a7Iv3bUlzO3+DkFOUbvH74TQwQP2Wq1zks9Bp4akVcrXL8ImIMSAXrQL96r5QY3aRooQYQSbkCa0JgReC8XabnZInr1PPWgy0xP5HgBU9pjGnGBLc9Qg=,iv:bCXdvYPJoAf8VCOjC/EX9gMBE71tT5CzikZdUtVlmVI=,tag:MivMt0Ip3AoewmhOIjqq6g==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
