--- a/kubernetes/apps/flux-system/webhooks/app/github/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/webhooks/app/github/secret.sops.yaml
@@ -3,4 +3,24 @@ kind: Secret
 metadata:
     name: github-webhook-token-secret
 stringData:
-    token: ENC[AES256_GCM,data:zACwYlwFttUOWjbT+X/g8OH0cgrKXpyssf6PlewpA7w=,iv:r0W4y1k1BVUL0/3jUWVeziUtlz/R+Z5LRONFfKq9TZU=,tag:StkvwcnqC4Hu+JZE1gU+Ew==,type:str]
+    token: ENC[AES256_GCM,data:X5wgr6g/lbkv7LLSqzdVAv7O0ZpCUFyN17w42riZl+4=,iv:LoiHd2XsKZYJ0e/mq7b4yhPKW0CKRLp3eOxtIBopyCk=,tag:r4UDuhaRnxUqjtQTcn7XLw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGOTFmaTZMQ3pRcGg1c3Z2
+            YXJEY2RZTjgwQTFLdFlJNVNPd291ZzRrdjBZCmRCUnppbHNZT2lUbVZ1N1JNZTZX
+            MVJQUG9kV1RWVFpxRktvdVRZTEpuVTAKLS0tIDQ3M0ZmeFE4MTlhMEs0WDNubnQ2
+            RHdGandXVDc2T1RRclY5bWR2OEpBaDAKZIXw013PXmMskPCFjlfbsNkOri+/+Qrf
+            1rj+TWdxV9Eoom0BPSZHSmf6e6NGjeMv/+uODa0S0yZ5pcCEtCxV5Q==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:18Z"
+    mac: ENC[AES256_GCM,data:/LFyPkUftaQH5Fl7VFV5UA8VgQbeRdSn72QTMm5L8JiAoqyYO69Wxo8DFFG67wSqSrFOVMvJlCQPdUxTkmtEulB+kJvYBSiR9eHDY0LTQKYAVzw9g4ZGTqtJ4jidlz1I1QZnA4cXtniBWdwLXkM5xKkSs9W7shdq6BIAEFYBoEk=,iv:x0ky8D+652DU2Gdi0c8QCH4xBovQWgBH/adTkOf4bfo=,tag:2zLJS7DOs3uzjnIA5O9cNw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
