--- a/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
+++ b/kubernetes/apps/forgejo/forgejo/secret.sops.yaml
@@ -5,6 +5,26 @@ metadata:
     namespace: forgejo
 type: Opaque
 stringData:
-    email: ENC[AES256_GCM,data:j58555O2cx2j4fF2NmETKkgOP/2ALQ==,iv:tLb1sX4JSoMjbdfiDJ+cA7Mz7jkIZ3Qz7GDZeUxE31g=,tag:j+mFEaSHKe8KZPF04bRvrw==,type:str]
-    username: ENC[AES256_GCM,data:nAi9NEO47g==,iv:AziUrUUAe00vXYVAycF1wQDDF+ARkMEykcFde2V3y/c=,tag:lGf1luwpai4vtq0j14lDug==,type:str]
-    password: ENC[AES256_GCM,data:+kGruFouXc5SEb7VweQ=,iv:owwRN/qSp5D/1H4L7IeYPB6IXv7RDpagsY91PuUYN90=,tag:JN0W7HxC030JiUknM+pZjw==,type:str]
+    email: ENC[AES256_GCM,data:FkZ8zeCx8WdrmBeUBYUnQ27ylUGGZeR0EMqYYVrO3bel0m1FqcoKjPftgIm7+AF8ySZHz21BEvLFzGkMQ8O4Z/efqOvqiIAUxFElOhf+9iqmEF0mhdsErZdSJKYiPQ0boVIlVqFm6YntrhYwVvuR6a/UmpW5rOxI3t0gMdjIW+RvqqUBESu1yWQK1A==,iv:eKwZs9bDfALMMTIC0wS8VAgCFGZYSMrA5cJGxI65JY4=,tag:/lpjZ5yQF0Ly4rqldEMGlA==,type:str]
+    username: ENC[AES256_GCM,data:zqkQ21cRtxi7gXO/1pQR+8+036FC9TxRwQGZPb6zA/DvcPDEWXzZRV8rNtF3pDXW6GB2v8quSmOQ62u0ThmudL+h9uIbYovK5VYH2S1fPyDoI6eXptefpBUVfwrQMaf0KZN2C6UPW0eqI+uQUfrPrKtZc/1Hp+E=,iv:95QOHcFoQVC26BzCOBlzvmq48ekUOK5bn9GmhSVTdh4=,tag:htw68RNOJ23B6YDF9RyaVQ==,type:str]
+    password: ENC[AES256_GCM,data:UTU4gFjALvpzBqSHPmp5whLKPrUPe9E2uZHqygq32Kby4ugGIDJpxLV5aC9U/Tffr5IGM3+4eZOIU9XHpccxPVmiYWdQ99SlWwX247eamwfIu7dfFZvQyYe2mosH8X0NxOSSW3/p9jQXke5kmcQCIUtN8i1z5TyBhTV8wxOaoQ==,iv:NDYYghdv30ci4/6VeSSoLVh9v2i92rOYo+LME6nNuEk=,tag:/s4qHpG/RlvTUufbK4JJSA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaR29oQlk1NEtKblk2YmUw
+            UWJxMGQwbXNmWDB1Z0hUK3ZZdTNKSXpjTEY4CjhOQi9RV3M4dWRlczJJcFU3RHVm
+            cmt0Q1F4SFJxRmRjQmVGekxEcDZYTG8KLS0tIEppZjRtMWhHQTJqMlJXN2xtUGRH
+            eWd3VkVmcU1WUW1YbTM2Z09IdkRuTVkK9MDlWX+R39ucTFzW1gx9vsdQonDzq3mO
+            a/q6ZqbdszU3v3e5AOVF+mhqyv+37D0O+QvQ+u/TROEzs6YDxmZ5vw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:21Z"
+    mac: ENC[AES256_GCM,data:fh1UufJrc1FGvTc2eESEhCKBi9lgIEPTYGQnwXHxeO9Jy56hpAE/+4YqI5v/QtVBQLO/4e2EIsUyuct8vfIRB855q9fViOBmh/8USGsljZqeNPhPMX/szGR9fI9QhWpngezLLfp/2k6QfM+6GbDANCDuEnjoec5X5Myh2lHmR1M=,iv:WP9wYseO2/Gu2fbxYLEsSZndxRLyi0Az+r2d+BVerx0=,tag:F2bJnfsH9lErApb5rNW9fg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
