--- a/kubernetes/apps/komodor/secret.sops.yaml
+++ b/kubernetes/apps/komodor/secret.sops.yaml
@@ -4,4 +4,24 @@ metadata:
     name: komodor-secret
     namespace: komodor
 stringData:
-    apiKey: ENC[AES256_GCM,data:IV5HeWivvjF7G2yjdyg7lEL7pYCf9wR2seYWZeqx9YWuAq1f,iv:wQO2IFJW45n2wAMi7cvPrWX/MDrvKsCUfcCr5FQ3D3s=,tag:CRMYjiHIW2Qi3C87G2S4VA==,type:str]
+    apiKey: ENC[AES256_GCM,data:z23UiooKcRr9tlj0DbChjB1A7FCB2t4zW7i0y1qHdhOHQUGOq2edAWnbcFJVrR6XbjfzRQdNIihVnuf4H/gx79ZQ+b081g1GT/+GNRVZmkkFDSzcpS02iXtTonO2yhyjtI8jl8/UvLt1zfDs+vWc7VDwqJmQCJwA3tK3XIT/NFLfOfLf1PqFbS1nJpaTBqoLMjdvDZWnBa6Jfkg=,iv:FZ34d/e3CyvdAHyMWDKL9eGZC+wYqysfn7R9iBu/8OY=,tag:zXaaY3ngHeLElMvBeQs9cg==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpSzdCSlpJS1krTTJYN2xy
+            N3ZyN3JSbytFYVNNR3gvOVRxMEZSYzF6Sm0wCnZqUTM5ODlsWi9VQmY3WVM3YkV5
+            UWM0aWl2RTZUQ1FNdjVwdGE2NTVtdmsKLS0tIE16dFdqZjBObmpYTkhGaVIveUhB
+            TEMrdTExM3Z4eVNmUTdNN0YzZUtUVWsKnqyv6BmAU1cB3FWnSUjlMRMNVYygPlth
+            nP3hS5JA+R3KrxGmCJWbn7xY3qSAnHEryVSyK4mtF8/cWr4BHaUoEA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:21Z"
+    mac: ENC[AES256_GCM,data:kuRPSkmtDKCiZZc2P2mE2FgvhAcPMzvUlJpuwiM1vKO2i2Mi02dNqvLHr1FfSbsnIxJf3ZaknwaSDFtxvHiLMZyZjcEKIr/79PakP+zKfdFszGDZKmy3YprzSjjaAfRWtayGj0z/cE9+n4MZ+c+gtuq2tzIyYOFrca7jDSL1Llk=,iv:+b95esy7tsWA2yKzQS9n0xbhtwKcuTrAHKFx6CDeQ3o=,tag:5ogBgXzjvPqMbaaM0WaLLA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
