--- a/kubernetes/apps/network/cloudflared/app/secret.sops.yaml
+++ b/kubernetes/apps/network/cloudflared/app/secret.sops.yaml
@@ -3,5 +3,25 @@ kind: Secret
 metadata:
     name: cloudflared-secret
 stringData:
-    TUNNEL_ID: ENC[AES256_GCM,data:ZCwxSb24Q8BesBlgQmiZYQKeWsriVpQlbx35Aqt0aY9ZqQvB,iv:d/UaM0OY2kz0lAJ8e/Hq/WFLaH3edHzQuMVpMMvA9Pg=,tag:hMn5aB44PFIBlmiM5jajew==,type:str]
-    credentials.json: ENC[AES256_GCM,data:Vq6cy5sbovunHAFPD0fyp1LIQB6qINey7LKr/kFC7hb1cAJ0xSGKzKZyXxgQCW8yxWNUGkZ2xVqr2n4ayykXl+1J8I3iQ6MRvz8l47aiB2mcSaWXHgnLHNFL4U65YC2oflsp/TUPJOmA317SeSzFNrZ4acBiUat/DVFXLZEMiATCWhPRH7wZpwfjzGHVASIuGKK5fbYY0dBrGwZexHzATZveLeKNvJZZsl7Fhyh+ng==,iv:Rwaso4VYdvexLOT45pjobj8sf5iySmyTkECdEGedOm0=,tag:AOboirmyszcJE5P6rwKK9g==,type:str]
+    TUNNEL_ID: ENC[AES256_GCM,data:8lFZZn3hSB6fqHe7dE0udtoiqda80b10rAgbKTNw/wTdXR4J,iv:ik6HqPbw1ckn8KuaCMKmnVwqnCXDh1CDg/uptsGSQEU=,tag:OWK7/TvAh4PDM1kJO4mY9A==,type:str]
+    credentials.json: ENC[AES256_GCM,data:lqwxro3kKbswpdPUXYY+4wEJJJoPZf7XWWQq5lIUKK354/XsoPSGTZiyZ1lsoYd754qq86Kwq2VUq5Eg80Dj/vAn1fxHAeqVqDLl1PiYKyTZqZSVuxUfkbyqxnK1N81SyrLBJBwxBvziOBgf+g9V4LV0zCxgP2lcNoZQ0e1wGl5AUOGPTR/7jH0JHTGMP8p5MZH/q4HIfEEgW9seUkVEQ9sOo+0Xr/7/h9bpPR2hog==,iv:v9KyZtb2pbcAQOLhypLA9/pULcx+aKfbktLnKVvx8jo=,tag:RzUy4IY9yzz5/qbQMUTecw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0elRGemV1SFRVNjFrcDZi
+            ZC9ncVExMjBqZXNqa0NhWEErUGY1YWE4cGpvCm9VWExWeFkxWkE1SFJJekRyTjIr
+            a3FLSGsreHViZXZucEc3cmFIbGZ2dkUKLS0tIFRReXl1K2kyT3daSGhRbVZvcXh3
+            a2FUWnFwYkFjSStnRmtSL1VuWHFIdUEK9B9Vo7aneekoUhQhlLDmjso4wTYNylTd
+            3TU1MjLWJyLRKFphGl6869YrwLWvCOTxQaHEj7jvEGnVF1Gv4Hhcjw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:18Z"
+    mac: ENC[AES256_GCM,data:tKHa/jJuW+j2/5wAnNl7egQA9P9BrpDQYcGtIFlYmLb7GCN1rhFpfP77Va8fhkoAsGARfYgrC8L3v1JiVK0jOFC4Z4ZFX+kdmWXet3d7PJIoX5y/qL/MKRx6u5D5NZtBpMcBYdwRW2p4SQzWfZBGq4KDGU4KYLVa02to6w13S3Q=,iv:Ep325v4rulrDskeGOWBiI5slLt/Nw3Ilt4RpZn0Q6kQ=,tag:GIhbOGwl7Q6jgCF2IW8jTw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
