--- a/kubernetes/apps/network/external-dns/app/secret.sops.yaml
+++ b/kubernetes/apps/network/external-dns/app/secret.sops.yaml
@@ -3,4 +3,24 @@ kind: Secret
 metadata:
     name: external-dns-secret
 stringData:
-    api-token: ENC[AES256_GCM,data:2rLv8B7SgFfW4anu++UH/PCQ8BIG069MldeA38SoYiHoUI9qd1ZYbw==,iv:aBVu8jsaMAwi1dKk5SnwSvwFAaB1pOhFWn+wq8ZSW5I=,tag:8/jlH5U//bkFDqXRelkD/g==,type:str]
+    api-token: ENC[AES256_GCM,data:a7YFo6MI6Ld194iyE648yUwAgAbhgQaFau1TfxvhFGLHSa9g5o9CsQ==,iv:xtK+j/t+O/ITDMpjXnTlxNkXnzT/4W+K7veyGtgWBkA=,tag:Hp5VaWkgTweO6KrrniBXtw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxTjczcldsaHphR3NIYkRI
+            SDZBR1R2K2laeGpUaVozeUZYSkU0Z3J4UHdVCkJ6RExqbUFnTzNHbW85aG5Ra283
+            QjNXcW54OWJRNTVTNnRSaVl0Wi92alkKLS0tIENPZzhUSlMvT05WaGVwbnY2d3Qr
+            ZTJNRmtSSzhjREg3VHVTTENpVUl0ejgKOGmh90a1IJi7t5FmF4xKeEc+i7Sd6xoC
+            9ZFXonqp241UXPiIOmEML4Xi23UmIDkgzKEiwZlW96628vHOOA+yLw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-21T20:39:18Z"
+    mac: ENC[AES256_GCM,data:q2Uov2m8oycvYGGNQ/0BkPq4h5qmX21oJ6CfVJnNgjwfTKK/Afx5gIU4c/OWrHBB/gLN1LclxFmbMORxpafdfg77sw3iZWjhu4CSKfIznXdr1Kk7olY9iZfvLYtr/cHzjGmD3pt8OicfrwI3Vd+z9Heyl78eYfgYgSpCf6+pq24=,iv:g/QVIvAhUjGgZVqupXjGtOVVmdoZ8jDQpiG6hretjrk=,tag:gT7St4Fqjg4U9EEY9TGSWA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.1
