--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:VFTHlhAA9gFnEEo=,iv:TbQGTDeVTSbvv4y26glz4l96dZgy2KdBVpdtTkffrSA=,tag:I4KBxOMg7Z1N2czwcat2sA==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:34/PNh0aJvspJilGk70PgE/AziPADw==,iv:zIG3csBffGbRDx5wb0379IScmC09BGCtHyrYsEUdvq4=,tag:Qk7hjFqDvdm19d7vVPKamQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:iql9JEDCyz5aJ1dNlXRGcVVMRhlOChiEc56jBwKDmXIJ6lN1,iv:T0vHoX0hpVUPHkeeHbsL/MgsebcvGc3B/iknsKfVolw=,tag:tU2RkOEFjFGZhs6XXhbJuw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ru6oDYUPYIeCQ7c=,iv:Aqv2brPEFxn7y0Wj2ZIlc++AuMBIh9zfUoxLetLbCRM=,tag:YG0gp8S5pmv/AMDw4hostQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:usil3sp+JgRTFm6vmi5KxsG5WWYVAA==,iv:oz1ovZxibeK8pM2S0tWAMN0N7Q8LYTQsWtdv5twQaZY=,tag:DxKny/lhg7vOkq9j3g7KWQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:LroQo1OunII/LBERDGelZTo4qz460mI+oEGJLT+JPccM3W+y,iv:8Wk1a6Obl70uVXMOJg4AokImv5EhRDTJ+I78Co7Yg18=,tag:o2Pbp0s/KZfpQAerzUpm9g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpNUpQQk5JbEtiUkdzVVRh
-            TkJhK21yczlYRUZSQll0aFlvL0ZEUzJia3o0Ck15aDlqaXk0cHBJbzllYXlocnF3
-            d2lDTXgyaEVNRitMcmJUb3pYQSs1MU0KLS0tIHE4di83clNkUlpJaWVOcFVXblhL
-            VGQwckxBWGlPU0RzOEJJMFcwVUx5ZkUKI0ZzNnS2++1KTuCbsCyRGLchcfhOR4ZG
-            9EPTy9VyNBC51IXHPI+81QxN6YUIgnnLaGSoSDPDmIgcSZmBUULHDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2b2dYaWxMbmd5eEF1RXp2
+            TkVuQ1lxRUhjNDk1WlBEWXMzQ0ZJSTRiYnlVCmpNTE1OWW9tVDkzVUtIWFpBUUVK
+            NjdSTXJpQkFJTmtjNERtcHpRbnFlMGMKLS0tIEpzT1ZCWVBBWURubmhZZXZTeEdM
+            ZVZ5eW1MZ0VHdWtNblJuNmJJaWpTbm8K/a91I6SMwfgm2qJ0TIbVlKEjMcF60zdh
+            FAb/nJZOQKBsqDfrVdGMYruhMLKeoJt+xo5dFyTbZkdnyHGtazRX1w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T19:54:47Z"
-    mac: ENC[AES256_GCM,data:xcYouIg0DqQ+pKsaM9zTTCAte0q6LJIRrX2fPfWjcYggmJPy1NRiBbCLW7Ks3qLxno+8JQ2Ae5nlAdsWHnrziSVmtbeivEVU7PGn8xGCFETU6kiSl1BHS+pIoLnnPWTMpv98TAgX70bbqNh0uDV7jW08h0hTLX/lS7tr06PVsm8=,iv:s7vKZNXzqLekApG697nI0hQ+Iz4rV7mS3WEUm37dGow=,tag:RI6+KADAV7Sq2IwhaqfmYg==,type:str]
+    lastmodified: "2024-10-21T20:39:17Z"
+    mac: ENC[AES256_GCM,data:SmYQtmGJu+eb20w8wFvWuHhC1rSjb9oJnug9jIVZyw725HUGDnaLflKeaz/AyxTLQwG6GBrp1dInRnJmsUIct0HelzHt561xjLLIC8kxc8whWuHBSkzIwsjv/FZ90qcSaUewxRFQV5Tm03+q5xN49RVkED1xJoFpcEBhd2azYX0=,iv:NJ1xRoQDSr/l466FfiOur4ULtka6RFJsinAVRViSm1s=,tag:5VXVbStY8+9ToTFGfi1Mag==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
